testsuite/tests/properties/invalid_map/default_value.lkt
import common

class ListNode: FooNode {
    @parse_field nb_list: ASTList[FooNode, NumberNode]
    @exported fun prop(): Array[Entity[NumberNode]] =
        self.nb_list.map((x=12) => x)
}
